PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2011, PHP 5.3.9

- Core:
  . Fixed bug #60120 (proc_open's streams may hang with stdin/out/err when 
    the data exceeds or is equal to 2048 bytes). (Pierre, Pascal Borreli)
  . Fixed bug #60019 (Function time_nanosleep() is undefined on OS X). (Ilia)
  . Fixed bug #55798 (serialize followed by unserialize with numeric object
    prop. gives integer prop). (Gustavo)
  . Fixed bug #55749 (TOCTOU issue in getenv() on Windows builds). (Pierre)
  . Fixed bug #55707 (undefined reference to `__sync_fetch_and_add_4' on Linux
    parisc). (Felipe)
  . Fixed bug #55674 (fgetcsv & str_getcsv skip empty fields in some
    tab-separated records). (Laruence)
  . Fixed bug #55649 (Undefined function Bug()). (Laruence)
  . Fixed bug #55622 (memory corruption in parse_ini_string). (Pierre)
  . Fixed bug #55576 (Cannot conditionally move uploaded file without race
    condition). (Gustavo)
  . Fixed bug #55510: $_FILES 'name' missing first character after upload.
    (Arpad)
  . Fixed bug #55509 (segfault on x86_64 using more than 2G memory). (Laruence)
  . Fixed bug #55504 (Content-Type header is not parsed correctly on
    HTTP POST request). (Hannes)
  . Fixed bug #55475 (is_a() triggers autoloader, new optional 3rd argument to
    is_a and is_subclass_of). (alan_k)
  . Fixed bug #52461 (Incomplete doctype and missing xmlns). 
    (virsacer at web dot de, Pierre)
  . Fixed bug #55366 (keys lost when using substr_replace an array) (Arpad)
  . Fixed bug #55273 (base64_decode() with strict rejects whitespace after
    pad). (Ilia)
  . Fixed bug #50982 (incorrect assumption of PAGE_SIZE size). (Dmitry)

- Calendar:
  . Fixed bug #55797 (Integer overflow in SdnToGregorian leads to segfault (in
    optimized builds). (Gustavo)

- Curl:
  . Fixed bug #54798 (Segfault when CURLOPT_STDERR file pointer is closed